@@ -21,14 +21,14 @@
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
-        <version>17</version>
+        <version>18</version>
         <relativePath />
     </parent>
 
     <groupId>org.apache.sling</groupId>
     <artifactId>sling</artifactId>
     <packaging>pom</packaging>
-    <version>25-SNAPSHOT</version>
+    <version>28-SNAPSHOT</version>
 
     <name>Apache Sling (Parent)</name>
     <description>The parent project for Apache Sling</description>
@@ -37,7 +37,12 @@
     <url>http://sling.apache.org</url>
 
     <prerequisites>
-        <maven>3.0.4</maven>
+        <!-- This defines only the minimum version for plugins, but not for the build
+             See http://maven.apache.org/ref/3.3.9/maven-model/maven.html#class_prerequisites.
+             Therefore the enforcer plugin needs to verify the maven version. See configuration
+             of the plugin further below
+        -->
+        <maven>3.3.9</maven>
     </prerequisites>
 
 
@@ -54,13 +59,13 @@
         <!--
             Java API and class file compliance. This property supports
             one of three values:
-              - 6: Java 6 (default)
-              - 7: Java 7
+              - 6: Java 6 
+              - 7: Java 7 (default)
               - 8: Java 8
             Using anything else causes the set-bundle-required-execution-environment
             to fail the build with an exception
         -->
-        <sling.java.version>6</sling.java.version>
+        <sling.java.version>7</sling.java.version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
@@ -117,7 +122,7 @@
     <build>
         <plugins>
 
-            <!-- Require Java 5 or higher for building -->
+            <!-- Require Java 7 or higher for building (as bnd since version 3.0 is built with Java 7) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -132,10 +137,13 @@
                                 <requireJavaVersion>
                                     <message>
                                         Apache Sling must be compiled with Java
-                                        5 or higher
+                                        7 or higher
                                     </message>
-                                    <version>1.5.0</version>
+                                    <version>1.7.0</version>
                                 </requireJavaVersion>
+                                <requireMavenVersion>
+                                    <version>3.3.9</version>
+                                </requireMavenVersion>
                             </rules>
                         </configuration>
                     </execution>
@@ -163,24 +171,6 @@
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>check-memory-task</id>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <target>
-                                <echo>
-**************** WARNING (SLING-443/SLING-1782) ******************************
-On most platforms, you'll get OutOfMemoryErrors when building unless you set
-on 32bit platforms: MAVEN_OPTS="-Xmx256M -XX:MaxPermSize=256M", see SLING-443
-on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
-******************************************************************************
-                                </echo>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                    <execution>
                         <id>set-bundle-required-execution-environment</id>
                         <goals>
                             <goal>run</goal>
@@ -192,7 +182,6 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                                 <script language="javascript"> <![CDATA[
                                     var System = java.lang.System;
                                     var bree = "JavaSE-1.6";
-                                    var skipAnimalSniffer = false;
                                     var animalSnifferSignaturesVersion = "6";
                                     var slingJavaVersion = System.getProperty("sling.java.version");
                                     if (!slingJavaVersion) {
@@ -203,18 +192,14 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                                         bree = "JavaSE-1.7";
 	                                    System.out.println("Setting Bundle-RequiredExecutionEnvironment=" + bree + " from sling.java.version=" + slingJavaVersion);
 	                                } else if ( slingJavaVersion == "8") {
-                                        // there are no published signatures for Java 1.8, so skip execution. However, we also need a valid
-                                        // artifact in the signature, so fallback to the 1.6 signatures and skip checking entirely
-                                        // see also https://github.com/mojohaus/animal-sniffer/issues/1
-	                                    skipAnimalSniffer = true;
-	                                    bree = "JavaSE-1.8";
+                                        animalSnifferSignaturesVersion = "8";
+                                        bree = "JavaSE-1.8";
 	                                    System.out.println("Setting Bundle-RequiredExecutionEnvironment=" + bree + " from sling.java.version=" + slingJavaVersion);
 	                                } else if (slingJavaVersion != "6") {
                                         System.out.println("Unsupported sling.java.version=" + slingJavaVersion + "; must be 6, 7 or 8.");
                                         throw "sling.java.version must be 6, 7 or 8";
                                     }
                                     project.setProperty("sling.bree", bree);
-                                    project.setProperty("animal.sniffer.skip", skipAnimalSniffer);
                                     project.setProperty("sling.animalSignatures.version", animalSnifferSignaturesVersion);
                                 ]]></script>
                             </target>
@@ -313,6 +298,8 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                         <exclude>DEPENDENCIES</exclude>
                         <!-- .rej files from svn/patch -->
                         <exclude>**/*.rej</exclude>
+                        <!-- Exclude Java crash log files -->
+                        <exclude>hs_err_*.log</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -331,7 +318,7 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                 <plugin>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>maven-sling-plugin</artifactId>
-                    <version>2.1.0</version>
+                    <version>2.1.8</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.sling</groupId>
@@ -344,9 +331,17 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                     <version>2.0.4-incubator</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                    <configuration>
+                        <retryFailedDeploymentCount>10</retryFailedDeploymentCount>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-scr-plugin</artifactId>
-                    <version>1.21.0</version>
+                    <version>1.22.0</version>
                     <!-- As QDox is trying to inspect/load the classes
                          we have to add a slf4j implementation to the
                          class path of the plugin - we usually use
@@ -357,7 +352,7 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                         <dependency>
                             <groupId>org.slf4j</groupId>
                             <artifactId>slf4j-simple</artifactId>
-                            <version>1.5.2</version>
+                            <version>1.7.6</version>
                         </dependency>
                     </dependencies>
                     <executions>
@@ -378,7 +373,7 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>2.5.3</version>
+                    <version>3.2.0</version>
                     <inherited>true</inherited>
                     <configuration>
                         <outputDirectory>${basedir}/target/classes</outputDirectory>
@@ -405,6 +400,11 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                     </executions>
                 </plugin>
                 <plugin>
+                    <groupId>biz.aQute.bnd</groupId>
+                    <artifactId>bnd-maven-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>2.10</version>
@@ -415,9 +415,9 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                     <version>2.6</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>maven-jetty-plugin</artifactId>
-                    <version>6.1.26</version>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>slingstart-maven-plugin</artifactId>
+                    <version>1.4.4</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.cargo</groupId>
@@ -437,7 +437,7 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>animal-sniffer-maven-plugin</artifactId>
-                    <version>1.14</version>
+                    <version>1.15</version>
                     <configuration>
                         <signature>
                             <groupId>org.codehaus.mojo.signature</groupId>
@@ -977,6 +977,25 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
                                                 <ignore />
                                             </action>
                                         </pluginExecution>
+                                        <pluginExecution>
+                                            <pluginExecutionFilter>
+                                                <groupId>
+                                                    org.apache.avro
+                                                </groupId>
+                                                <artifactId>
+                                                    avro-maven-plugin
+                                                </artifactId>
+                                                <versionRange>
+                                                    [1.7.7,)
+                                                </versionRange>
+                                                <goals>
+                                                    <goal>schema</goal>
+                                                </goals>
+                                            </pluginExecutionFilter>
+                                            <action>
+                                                <ignore />
+                                            </action>
+                                        </pluginExecution>
                                     </pluginExecutions>
                                 </lifecycleMappingMetadata>
                             </configuration>
@@ -1048,22 +1067,22 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
         <dependencies>
             <dependency>
                 <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.core</artifactId>
-                <version>4.1.0</version>
+                <artifactId>osgi.core</artifactId>
+                <version>6.0.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.compendium</artifactId>
-                <version>4.1.0</version>
+                <artifactId>osgi.cmpn</artifactId>
+                <version>6.0.0</version>
                 <scope>provided</scope>
             </dependency>
 
             <!-- Web Application API -->
             <dependency>
                 <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
-                <version>2.4</version>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -1071,7 +1090,7 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
             <dependency>
                 <groupId>javax.jcr</groupId>
                 <artifactId>jcr</artifactId>
-                <version>1.0</version>
+                <version>2.0</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -1079,21 +1098,37 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.5.2</version>
+                <version>1.7.6</version>
                 <scope>provided</scope>
             </dependency>
 
-            <!-- OSGi support annotations -->
+            <!-- OSGi annotations: @Version, @ProviderType, @ConsumerType -->
+           <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>osgi.annotation</artifactId>
+                <version>6.0.1</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <!-- OSGi annotations for DS and metatype -->
             <dependency>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>org.apache.felix.scr.annotations</artifactId>
-                <version>1.9.12</version>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.service.component.annotations</artifactId>
+                <version>1.3.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>biz.aQute</groupId>
-                <artifactId>bndlib</artifactId>
-                <version>1.50.0</version>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.service.metatype.annotations</artifactId>
+                <version>1.3.0</version>
+                <scope>provided</scope>
+            </dependency>
+             
+
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>3.0.0</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -1101,35 +1136,66 @@ on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jmock</groupId>
                 <artifactId>jmock-junit4</artifactId>
-                <version>2.5.1</version>
+                <version>2.8.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.5.2</version>
+                <version>1.7.6</version>
                 <scope>test</scope>
             </dependency>
 
+         
+            <!-- DEPRECATED: Use official OSGi annotations -->
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.scr.annotations</artifactId>
+                <version>1.11.0</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <!-- DEPRECATED : Use the osgi.annotation instead -->
+            <!-- this version must match the version being used by the maven-bundle-plugin -->
+            <dependency>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>biz.aQute.bndlib</artifactId>
+                <version>3.2.0</version>
+                <scope>provided</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-        <!-- OSGi support annotations -->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.annotation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.metatype.annotations</artifactId>
+        </dependency>
+
+        <!-- DEPRECATED: OSGi support annotations -->
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
         </dependency>
+        <!-- DEPRECATED: OSGi support annotations -->
         <dependency>
-            <groupId>biz.aQute</groupId>
-            <artifactId>bndlib</artifactId>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>biz.aQute.bndlib</artifactId>
         </dependency>
     </dependencies>
 
